--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'DM Sans', sans-serif;
   background: #fff;
   color: #444444;
 }
@@ -34,7 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Nunito", sans-serif;
+  font-family: 'DM Sans', sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -254,7 +254,7 @@ h6 {
   font-size: 18px;
   font-weight: 500;
   color: #000;
-  font-family: "Poppins", sans-serif;
+  font-family: 'DM Sans', sans-serif;
 }
 
 .card-title span {
@@ -274,7 +274,7 @@ h6 {
 /* Alerts */
 .alert-heading {
   font-weight: 500;
-  font-family: "Poppins", sans-serif;
+  font-family: 'DM Sans', sans-serif;
   font-size: 20px;
 }
 
@@ -323,7 +323,7 @@ h6 {
 /* Breadcrumbs */
 .breadcrumb {
   font-size: 14px;
-  font-family: "Nunito", sans-serif;
+  font-family: 'DM Sans', sans-serif;
   color: #899bbd;
   font-weight: 600;
 }
@@ -390,7 +390,7 @@ h6 {
   font-size: 26px;
   font-weight: 700;
   color: #012970;
-  font-family: "Nunito", sans-serif;
+  font-family: 'DM Sans', sans-serif;
 }
 
 .header {
@@ -1018,7 +1018,7 @@ h6 {
 }
 
 .iconslist .label {
-  font-family: var(--bs-font-monospace);
+  font-family: 'DM Sans', sans-serif;
   display: inline-block;
   width: 100%;
   overflow: hidden;
